Fix Footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,6 @@ footer {
 }
 
 footer nav {
-    width: 100%;
     margin: 30px 3% 0 3%;
     padding: 40px 0;
 }
@@ -421,8 +420,6 @@ footer nav {
     display: flex;
     justify-content: space-between;
 }
-
-
 
 footer h3 {
     margin-bottom:24px;
